Closed Bug 371285 Opened 18 years ago Closed 18 years ago

Crash loading form with select inside repeat

Categories

(Core Graveyard :: XForms, defect)

x86
Windows XP
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: aaronr, Assigned: smaug)

References

Details

(Keywords: fixed1.8.0.12, fixed1.8.1.4)

Attachments

(2 files)

I have a form that crashes on load. It is supposed to repeat a select control 3 times. The problem is with the nsXFormsControlList again. Even though we added the addref logic to the list, we seem to be encountering items on the list that should not be there (they've been freed already). This is possibly related to bug 371121, but in that case the crash was when doing an insert.
Attached file testcase
Attached patch proposed patchSplinter Review
Assignee: xforms → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #256281 - Flags: review?(aaronr)
Attachment #256281 - Flags: review?(surkov.alexander)
Comment on attachment 256281 [details] [diff] [review] proposed patch The crash is gone, but the testcase still doesn't work correctly (no items show up in the selects). Please open a bug and attach this testcase for that issue. with that, r=me
Attachment #256281 - Flags: review?(aaronr) → review+
Blocks: 371595
Attachment #256281 - Flags: review?(surkov.alexander) → review+
bug 371595 filed, patch checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8 branch on 2007-04-12 checked into 1.8.0 branch on 2007-04-16
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: