Bug 371285, Crash loading form with select inside repeat, r=aaronr+surkov